--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,9 +28,28 @@
     font-size: 38px;
   }
 
-  .landing_container p{
-    line-height: 1.5;
+  section{
+    height: 635px;
+    margin-bottom: 10px;
   }
+
+  .landing_container{
+    height: 100%;
+    padding: 10px;
+    margin: 10px 10px 0;
+  }
+  .landing_container p{
+    line-height: 1.3;
+    word-spacing: 2px;
+    margin: 15px 0 0 0;
+    text-align: left;
+  }
+
+  
+.landing_container h2{
+  padding: 10px;
+  margin: 0 auto;
+}
 
 
 
