--- a/css/responsive.css
+++ b/css/responsive.css
@@ -41,7 +41,7 @@
   .landing_container p{
     line-height: 1.3;
     word-spacing: 2px;
-    margin: 15px 0 0 0;
+    margin: 15px 0 8px 0;
     text-align: left;
   }
 
