--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,7 +36,7 @@
   .landing_container{
     height: 100%;
     padding: 10px;
-    margin: 10px 10px 0;
+    margin: 10px 10px 7px;
   }
   .landing_container p{
     line-height: 1.3;
